--- a/templates/view.html
+++ b/templates/view.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test Table</title>
-</head>
-<body>
-
-{% for table in tables %}
-            {{titles[loop.index]}}
-            {{ table|safe }}
-{% endfor %}
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Dev Environment</title>
+    </head>
+    
+    <h1> Test Dataframe </h1>
+    
+    <body>
+    {% for table in tables %}
+                {{titles[loop.index]}}
+                {{ table|safe }}
+    {% endfor %}
+    </body>
+    
+    
+    
 </html>
