--- a/templates/view.html
+++ b/templates/view.html
@@ -5,6 +5,12 @@
         <title>Dev Environment</title>
     </head>
     
+    <h1> Welcome to the new app (dev branch)!</h1> 
+    
+    <h2>
+    <br/><br/>This is for mobile price prediction
+    </h2>
+        
     <h1> Test Dataframe </h1>
     
     <body>
@@ -17,3 +23,4 @@
     
     
 </html>
+
