--- a/templates/view.html
+++ b/templates/view.html
@@ -20,6 +20,30 @@
     {% endfor %}
     </body>
     
+    <head>
+        <meta charset = "UTF-8">
+        <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+        <title>Billing Forecast</title>
+        <script src = "https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    </head>
+    
+    <body>
+        <canvas id = "linechart", width = "900", height = "500"></canvas>
+        <script>
+            var ctx = document.getElementById("linechart").getContext("2d")
+            var linechart = new Chart(ctx, {
+              type: "line", 
+              data: {
+                labels: {{ time | safe }}
+                datasets: [{label: "cost", data: {{ cost | safe }}, fill: false, borderColor: "rgb(75, 192, 192)"}] 
+              },
+              options: {
+                  responsive: false 
+              }
+            });
+        </script>
+    </body>
+    
     
     
 </html>
