--- a/templates/bill.html
+++ b/templates/bill.html
@@ -14,6 +14,7 @@
         <title>Billing Forecast</title>
     </head>
     
+    <h2> Test Graph </h2>
     <body>
         <canvas id="myChart" width="400" height="400"></canvas>
         <script>
