--- a/templates/bill.html
+++ b/templates/bill.html
@@ -46,6 +46,7 @@
                 }]
             },
             options: {
+                responsive: false,
                 scales: {
                     y: {
                         beginAtZero: true
