--- a/templates/bill.html
+++ b/templates/bill.html
@@ -58,14 +58,17 @@
     </body>
     
     <body>
-        <canvas id = "linechart", width = "900", height = "500"></canvas>
+        <canvas id="linechart", width="900", height="500"></canvas>
         <script>
             var ctx = document.getElementById("linechart").getContext("2d")
             var linechart = new Chart(ctx, {
               type: "line", 
               data: {
-                labels: {{ time_label | safe }}
-                datasets: [{label: "cost", data: {{ cost | safe }}, fill: false, borderColor: "rgb(75, 192, 192)"}] 
+                labels: {{ time_label | safe }},
+                datasets: [{label: "cost", 
+                            data: {{ cost | safe }}, 
+                            fill: false, 
+                            borderColor: "rgb(75, 192, 192)"}] 
               },
               options: {
                   responsive: false 
