--- a/templates/bill.html
+++ b/templates/bill.html
@@ -57,6 +57,7 @@
         </script>
     </body>
     
+    <h2> Billing Actual and Forecast </h2>
     <body>
         <canvas id="linechart", width="900", height="500"></canvas>
         <script>
@@ -64,11 +65,13 @@
             var linechart = new Chart(ctx, {
               type: "line", 
               data: {
-                labels: {{ time_label | safe }},
-                datasets: [{label: "cost", 
-                            data: {{ cost | safe }}, 
-                            fill: false, 
-                            borderColor: "rgb(75, 192, 192)"}] 
+                labels: {{ labels | safe }},
+                datasets: [{
+                    label: "cost", 
+                    data: {{ values | safe }}, 
+                    fill: false, 
+                    borderColor: "rgb(75, 192, 192)"
+                }] 
               },
               options: {
                   responsive: false 
