--- a/templates/bill.html
+++ b/templates/bill.html
@@ -61,7 +61,7 @@
     <body>
         <canvas id="linechart", width="900", height="500"></canvas>
         <script>
-            var ctx = document.getElementById("linechart").getContext("2d")
+            var ctx = document.getElementById("linechart").getContext("2d");
             var linechart = new Chart(ctx, {
               type: "line", 
               data: {
