--- a/templates/bill.html
+++ b/templates/bill.html
@@ -70,13 +70,13 @@
                     labels: {{ labels| safe }},
                     datasets: [{
                         label: 'actual cost',
-                        data: {{ values1 | safe }},
+                        data: {{ value1 | safe }},
                         borderWidth: 5,
                         fill: false,
                         borderColor: '#fc8403'
                     }, {
                         label: 'forecast cost',
-                        data: {{ values2 | safe }},
+                        data: {{ value2 | safe }},
                         borderWidth: 5,
                         fill: false,
                         borderColor: '#6b9362'
