--- a/templates/data.html
+++ b/templates/data.html
@@ -15,4 +15,13 @@
     <p><input type = "submit" value = "Submit" /></p>
 </form>
 
+
+<body>
+{% for key,value in form_data.items() %}
+<h3> {{key}}</h3>
+<p> {{value}}</p>
+{% endfor %}
+</body>
+
+
 </html>
