add input data, deploy

--- a/templates/data.html
+++ b/templates/data.html
@@ -15,6 +15,8 @@
     <p><input type = "submit" value = "Submit" /></p>
 </form>
 
+<h2> Please confirm input parameters below</h2>
+<h2> Then go back to the home page for prediction</h2>
 
 <body>
 {% for key,value in form_data.items() %}
@@ -22,6 +24,8 @@
 <p> {{value}}</p>
 {% endfor %}
 </body>
+
+
 
 
 </html>
