--- a/templates/view.html
+++ b/templates/view.html
@@ -5,10 +5,10 @@
         <title>Dev Environment</title>
     </head>
     
-    <h1> Welcome to the new app (dev branch)!</h1> 
-    
+    <h1> Welcome to the new app (dev branch)!</h1>
+
     <h2>
-    <br/><br/>This is for mobile price range prediction
+    This is for mobile price range prediction
     </h2>
         
     <h2> Please go to ./data to input mobile parameters </h2>
