--- a/templates/view.html
+++ b/templates/view.html
@@ -11,19 +11,31 @@
     This is for mobile price range prediction
     </h2>
         
-    <h2> Please go to ./data to input mobile parameters </h2>
+    <h1> Please enter the mobile phone parameters below</h1>
+
+    <form action="/data" method = "POST">
+        {% for s in var_list %}
+        <p>{{s | safe}} <input type = "text" name = {{s}} /></p>
+        {% endfor %}
+        <p><input type = "submit" value = "Submit" /></p>
+    </form>
+
+
     
     <body>
-    {% for table in tables %}
-                {{titles[loop.index]}}
+    {% for table in table1 %}
+                {{title1[loop.index]}}
+                {{ table|safe }}
+    {% endfor %}
+    </body>
+
+    <body>
+    {% for table in table2 %}
+                {{title2[loop.index]}}
                 {{ table|safe }}
     {% endfor %}
     </body>
     
 
-
-    
-    
-    
 </html>
 
