another update deploy

--- a/templates/data.html
+++ b/templates/data.html
@@ -8,7 +8,7 @@
 
 <h1> Please enter the mobile phone parameters below</h1>
 
-<form action="/data" method = "POST">
+<form action="/" method = "POST">
     {% for s in var_list %}
     <p>{{s | safe}} <input type = "text" name = {{s}} /></p>
     {% endfor %}
